# fastrlp

./: Cargo.toml
.github/workflows/: main.yml
benches/: bench.rs
fastrlp-derive/: Cargo.toml
fastrlp-derive/src/: de.rs  en.rs  lib.rs
fastrlp-derive/tests/: rlp.rs
src/: decode.rs  encode.rs  lib.rs  types.rs
tests/: rlp.rs
