[package]
name = "fastrlp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bytes = { version = "1", default-features = false }
ethnum = { version = "1", default-features = false, optional = true }
ethereum-types = { version = "0.13", default-features = false, optional = true }

[dev-dependencies]
fastrlp-test = { path = ".", package = "fastrlp", features = ["std", "ethnum", "ethereum-types"] }
criterion = "0.3"
hex-literal = "0.3"

[features]
alloc = []
std = ["alloc"]

[[bench]]
name = "bench"
harness = false
